--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -10,7 +10,7 @@
     padding-bottom: $feature-section-padding-bottom;
 
     @include media-breakpoint-up(md) {
-        margin-top: $feature-section-margin-top;
+        margin-top: 496px;
     }
 
     .feature-heading {
