--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,11 @@
   margin-top: -2px;
 }
 
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -2921,7 +2926,7 @@ textarea.form-control-lg {
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  border-radius: 0.25rem;
+  border-radius: 8px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -3946,8 +3951,8 @@ textarea.form-control-lg {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 .navbar > .container,
 .navbar > .container-fluid,
@@ -3962,12 +3967,17 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.21875rem;
+  padding-bottom: 0.21875rem;
   margin-right: 1rem;
-  font-size: 1rem;
+  font-size: calc(1.2625rem + 0.15vw);
   text-decoration: none;
   white-space: nowrap;
+}
+@media (min-width: 1200px) {
+  .navbar-brand {
+    font-size: 1.375rem;
+  }
 }
 .navbar-nav {
   display: flex;
@@ -4001,7 +4011,7 @@ textarea.form-control-lg {
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
-  border-radius: 0.25rem;
+  border-radius: 8px;
   transition: box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4045,8 +4055,8 @@ textarea.form-control-lg {
     position: absolute;
   }
   .navbar-expand-sm .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 27px;
+    padding-left: 27px;
   }
   .navbar-expand-sm .navbar-nav-scroll {
     overflow: visible;
@@ -4098,8 +4108,8 @@ textarea.form-control-lg {
     position: absolute;
   }
   .navbar-expand-md .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 27px;
+    padding-left: 27px;
   }
   .navbar-expand-md .navbar-nav-scroll {
     overflow: visible;
@@ -4151,8 +4161,8 @@ textarea.form-control-lg {
     position: absolute;
   }
   .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 27px;
+    padding-left: 27px;
   }
   .navbar-expand-lg .navbar-nav-scroll {
     overflow: visible;
@@ -4204,8 +4214,8 @@ textarea.form-control-lg {
     position: absolute;
   }
   .navbar-expand-xl .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 27px;
+    padding-left: 27px;
   }
   .navbar-expand-xl .navbar-nav-scroll {
     overflow: visible;
@@ -4257,8 +4267,8 @@ textarea.form-control-lg {
     position: absolute;
   }
   .navbar-expand-xxl .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 27px;
+    padding-left: 27px;
   }
   .navbar-expand-xxl .navbar-nav-scroll {
     overflow: visible;
@@ -4309,8 +4319,8 @@ textarea.form-control-lg {
   position: absolute;
 }
 .navbar-expand .navbar-nav .nav-link {
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  padding-right: 27px;
+  padding-left: 27px;
 }
 .navbar-expand .navbar-nav-scroll {
   overflow: visible;
@@ -11135,8 +11145,8 @@ textarea.form-control-lg {
   }
 }
 .btn-arrow {
-  background-color: #F02B0C;
-  box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
+  background-color: #18191F;
+  box-shadow: -2px 4px 45px rgba(0, 0, 0, 0.4);
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.5;
@@ -11150,46 +11160,6 @@ textarea.form-control-lg {
 }
 .btn-arrow:hover {
   color: #fff;
-}
-
-.btn-submit {
-  background-color: #F02B0C;
-  padding: 11px 19px;
-  font-size: 1.25rem;
-  font-weight: 500;
-  line-height: 1.5;
-  box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
-  color: #fff;
-}
-.btn-submit:hover {
-  color: #fff;
-}
-
-.btn-price-selection {
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 300;
-  font-size: 0.875rem;
-  line-height: 1.5;
-  font-size: 0.75rem;
-  background-color: #EEEFF4;
-  background-image: url(../../assets/images/btn-not-checked.png);
-  background-repeat: no-repeat;
-  background-position: center left 8px;
-  border-color: #D9DBE1;
-  padding: 5px 5px 5px 30px;
-}
-.btn-price-selection::before {
-  content: "€ ";
-}
-.btn-price-selection::after {
-  content: "\a/ month";
-  white-space: pre;
-}
-
-.btn-check:checked + .btn-price-selection {
-  background-color: rgba(11, 184, 77, 0.3);
-  border-color: #0BB84D;
-  background-image: url(../../assets/images/circle_check.svg);
 }
 
 .feature {
@@ -11259,47 +11229,67 @@ textarea.form-control-lg {
   font-family: "Playfair Display", serif;
   font-weight: 700;
   line-height: 1.5;
-  color: #18191F;
+  color: #F4F5F7;
   margin-right: 66px;
 }
 @media (min-width: 768px) {
   .menu .navbar-brand {
-    font-size: 1.25rem;
+    font-size: 1.375rem;
   }
 }
 .menu .navbar-nav {
-  max-width: 450px;
+  margin-left: auto;
   justify-content: space-between;
 }
 .menu .navbar-nav .nav-link {
-  color: #18191F;
-}
-.menu li {
-  padding: 0 0.7rem;
+  color: #F4F5F7;
 }
 
 .hero-section {
+  position: relative;
   width: 100%;
   height: 100%;
-  background-image: url(../../assets/images/Sun.svg);
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: #0076D1;
   padding-bottom: 20px;
-  margin-top: 25px;
+  padding-top: 80px;
   text-align: center;
 }
 @media (min-width: 768px) {
   .hero-section {
-    margin-top: 100px;
-    text-align: left;
+    padding-top: 162px;
   }
 }
 .hero-section .hero-cta {
-  margin-top: 31px;
-  margin-bottom: 25px;
+  margin-top: 25px;
+  margin-bottom: 259px;
 }
-.hero-section .app-img {
-  width: 350px;
+.hero-section .product-images {
+  position: absolute;
+  margin-top: -219px;
+  padding-bottom: 100px;
+  width: 100%;
+  background-image: url(../../assets/images/Sun.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.hero-section .product-img.focused {
+  width: 300px;
+  margin: 0 40px;
+}
+.hero-section .product-img.unfocused {
+  width: 250px;
+}
+.hero-section h1, .hero-section p {
+  color: #F4F5F7;
+}
+.hero-section p {
+  font-size: 1.375rem;
+  line-height: 1.5em;
+}
+@media (min-width: 768px) {
+  .hero-section h1 {
+    margin-bottom: 40px;
+  }
 }
 
 .feature-section {
@@ -11311,7 +11301,7 @@ textarea.form-control-lg {
 }
 @media (min-width: 768px) {
   .feature-section {
-    margin-top: 75px;
+    margin-top: 496px;
   }
 }
 .feature-section .feature-heading {
