--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -8,6 +8,10 @@
     box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
 }
 
+@mixin buttonShadow {
+    box-shadow: -2px 4px 45px rgba(0, 0, 0, 0.4);
+}
+
 @mixin borderRadiusSTD {
     border-radius: 3px;
 }
