--- a/scss/components/_feature.scss
+++ b/scss/components/_feature.scss
@@ -1,18 +1,15 @@
 @use '../custom' as *;
-@use '../components/mixins' as *;
-
-$feature-padding-top: 20px;
-$feature-padding-horizontal: 20px;
-$feature-padding-bottom: 30px;
 
 .feature {
-    text-align: center;
-    @include borderRadiusSTD;
-    @include darkShadow;
-    background-color: $white;
-    padding: $feature-padding-top $feature-padding-horizontal $feature-padding-bottom $feature-padding-horizontal;
+    h2 {
+        font-family: $font-family-sans-serif;
+        font-size: 2.25rem;
+        line-height: 1.2em;
+    }
 
-    .feature-icon {
-        font-size: $font-size-base * 2.0;
+    p {
+        font-size: 1.25rem;
+        line-height: 1.5em;
+        color: $gray-800;
     }
 }
