--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11209,7 +11209,7 @@ textarea.form-control-lg {
   padding: 67px 37px 49px 37px;
   margin-bottom: 30px;
   border-radius: 8px;
-  box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.35);
+  box-shadow: -2px 4px 45px rgba(0, 0, 0, 0.15);
 }
 .testimonial .testimonial-text {
   font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -11220,7 +11220,7 @@ textarea.form-control-lg {
 }
 .testimonial .testimonial-text::before {
   content: " ";
-  background-image: url(../../assets/images/quote_mark.svg);
+  background-image: url(../../assets/images/quote_mark_dark_blue.svg);
   background-size: cover;
   width: 16px;
   height: 14px;
@@ -11334,17 +11334,6 @@ textarea.form-control-lg {
   }
 }
 
-.testimonials-section {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: rgba(253, 222, 106, 0.2);
-}
-@media (min-width: 768px) {
-  .testimonials-section {
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
-}
 .testimonials-section .header-testimonials {
   padding-left: 94px;
   padding-top: 66px;
@@ -11375,24 +11364,21 @@ textarea.form-control-lg {
   }
 }
 
+.faq-section {
+  margin-top: 90px;
+}
+
 .footer-section {
-  background-color: #474A57;
+  background-color: #0076D1;
   padding-top: 50px;
   padding-bottom: 50px;
   color: #F4F5F7;
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 300;
-  font-size: 0.875rem;
-  line-height: 1.5;
+  font-size: 1rem;
 }
 .footer-section .footer-heading {
   color: inherit;
 }
 .footer-section a {
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 300;
-  font-size: 0.875rem;
-  line-height: 1.5;
   text-decoration: none;
   color: inherit;
 }
