--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -2,18 +2,17 @@
 @use '../components/mixins' as *;
 
 .footer-section {
-    background-color: $gray-800; 
+    background-color: $blue-800; 
     padding-top: $footer-padding-top;
     padding-bottom: $footer-padding-bottom;
     color: $gray-100;
-    @include fontLabelSmall;
+    font-size: 1rem;
 
     .footer-heading {
         color: inherit;
     }
 
     a {
-        @include fontLabelSmall;
         text-decoration: none;
         color: inherit;
 
