--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
 @charset "UTF-8";
-.lead-1 {
-  font-size: 1.125rem;
-  font-weight: 400;
-  line-height: 1.5;
-}
-
 .display-4 {
   font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
@@ -11144,6 +11138,17 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.lead-1 {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+@media (min-width: 768px) {
+  .lead-1 {
+    font-size: 1.125rem;
+  }
+}
+
 .btn-arrow {
   background-color: #18191F;
   box-shadow: -2px 4px 45px rgba(0, 0, 0, 0.4);
@@ -11162,15 +11167,38 @@ textarea.form-control-lg {
   color: #fff;
 }
 
+.feature {
+  text-align: center;
+  margin-bottom: 35px;
+}
+.feature:last-of-type {
+  margin-bottom: 0px;
+}
+@media (min-width: 768px) {
+  .feature {
+    text-align: left;
+    margin-bottom: 10px;
+  }
+}
 .feature h2 {
   font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 2.25rem;
+  font-size: 1.8rem;
   line-height: 1.2em;
 }
+@media (min-width: 768px) {
+  .feature h2 {
+    font-size: 2.25rem;
+  }
+}
 .feature p {
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5em;
   color: #474A57;
+}
+@media (min-width: 768px) {
+  .feature p {
+    font-size: 1.25rem;
+  }
 }
 
 .signup {
@@ -11236,6 +11264,7 @@ textarea.form-control-lg {
   line-height: 1.5;
   color: #F4F5F7;
   margin-right: 66px;
+  font-size: 1rem;
 }
 @media (min-width: 768px) {
   .menu .navbar-brand {
@@ -11255,13 +11284,12 @@ textarea.form-control-lg {
   width: 100%;
   height: 100%;
   background-color: #0076D1;
-  padding-bottom: 20px;
-  padding-top: 80px;
+  padding-top: 100px;
   text-align: center;
 }
 @media (min-width: 768px) {
   .hero-section {
-    padding-top: 162px;
+    padding-top: 120px;
   }
 }
 .hero-section .hero-cta {
@@ -11270,7 +11298,7 @@ textarea.form-control-lg {
 }
 .hero-section .product-images {
   position: absolute;
-  margin-top: -219px;
+  margin-top: -180px;
   padding-bottom: 100px;
   width: 100%;
   background-image: url(../../assets/images/Sun.svg);
@@ -11281,28 +11309,59 @@ textarea.form-control-lg {
   width: 300px;
   margin: 0 40px;
 }
+@media (min-width: 768px) {
+  .hero-section .product-img.focused {
+    width: 250px;
+  }
+}
+@media (min-width: 992px) {
+  .hero-section .product-img.focused {
+    width: 300px;
+  }
+}
 .hero-section .product-img.unfocused {
   width: 250px;
+  display: none;
+}
+@media (min-width: 768px) {
+  .hero-section .product-img.unfocused {
+    display: block;
+    width: 200px;
+  }
+}
+@media (min-width: 992px) {
+  .hero-section .product-img.unfocused {
+    width: 250px;
+  }
 }
 .hero-section h1, .hero-section p {
   color: #F4F5F7;
 }
 .hero-section p {
-  font-size: 1.375rem;
+  font-size: 1.125rem;
   line-height: 1.5em;
 }
 @media (min-width: 768px) {
+  .hero-section p {
+    font-size: 1.375rem;
+  }
+}
+.hero-section h1 {
+  margin-bottom: 35px;
+}
+@media (min-width: 768px) {
   .hero-section h1 {
-    margin-bottom: 40px;
+    margin-bottom: 25px;
   }
 }
 
 .feature-section {
-  padding-bottom: 56px;
+  margin-top: 450px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .feature-section {
-    margin-top: 496px;
+    padding-top: 90px;
+    margin-top: 406px;
   }
 }
 .feature-section .feature-image {
@@ -11312,10 +11371,15 @@ textarea.form-control-lg {
   background-position: center bottom 54px;
 }
 .feature-section .feature-image img {
-  width: 300px;
+  width: 250px;
+}
+@media (min-width: 768px) {
+  .feature-section .feature-image img {
+    width: 300px;
+  }
 }
 .feature-section .feature-heading {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
 }
 @media (min-width: 992px) {
   .feature-section .feature-heading {
@@ -11324,16 +11388,22 @@ textarea.form-control-lg {
 }
 
 .cta-section {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 60px;
 }
 @media (min-width: 768px) {
   .cta-section {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 90px;
   }
 }
 
+.testimonials-section {
+  padding-top: 60px;
+}
+@media (min-width: 768px) {
+  .testimonials-section {
+    padding-top: 90px;
+  }
+}
 .testimonials-section .header-testimonials {
   padding-left: 94px;
   padding-top: 66px;
@@ -11365,7 +11435,12 @@ textarea.form-control-lg {
 }
 
 .faq-section {
-  margin-top: 90px;
+  padding-top: 60px;
+}
+@media (min-width: 768px) {
+  .faq-section {
+    padding-top: 90px;
+  }
 }
 
 .footer-section {
