--- a/scss/components/_feature.scss
+++ b/scss/components/_feature.scss
@@ -1,15 +1,39 @@
 @use '../custom' as *;
 
 .feature {
+
+    text-align: center;
+    margin-bottom: 35px;
+
+    &:last-of-type {
+        margin-bottom: 0px;
+    }
+
+    @include media-breakpoint-up(md) {
+
+        text-align: left;
+        margin-bottom: 10px;
+    }
+
     h2 {
         font-family: $font-family-sans-serif;
-        font-size: 2.25rem;
+        font-size: 1.8rem;
         line-height: 1.2em;
+
+        @include media-breakpoint-up(md) {
+
+            font-size: 2.25rem;
+        }
     }
 
     p {
-        font-size: 1.25rem;
+        font-size: 1rem;
         line-height: 1.5em;
         color: $gray-800;
+
+        @include media-breakpoint-up(md) {
+
+            font-size: 1.25rem;
+        }
     }
 }
