--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -1,5 +1,15 @@
 @use '../custom' as *;
 
+.lead-1 {
+    font-size: 1rem;
+    font-weight: $lead-1-font-weight;
+    line-height: $lead-1-line-height;
+  
+    @include media-breakpoint-up(md) {
+      font-size: $lead-1-font-size;
+    }
+  }
+
 @mixin dropShadow {
     box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25); 
 }
