--- a/scss/sections/_cta.scss
+++ b/scss/sections/_cta.scss
@@ -2,11 +2,9 @@
 @use '../components/mixins' as *;
 
 .cta-section {
-    padding-top: $section-padding-top * 0.2;
-    padding-bottom: $section-padding-bottom * 0.2;
+    padding-top: 60px;
 
     @include media-breakpoint-up(md) {
-        padding-top: $section-padding-top;
-        padding-bottom: $section-padding-bottom;
+        padding-top: 90px;
     }
 }
