--- a/scss/sections/_faq.scss
+++ b/scss/sections/_faq.scss
@@ -1,4 +1,11 @@
+@use '../custom' as *;
+@use '../components/mixins' as *;
+
 .faq-section {
 
-    margin-top: 90px;
+    padding-top: 60px;
+
+    @include media-breakpoint-up(md) {
+        padding-top: 90px;
+    }
 }
