--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -8,6 +8,7 @@
         line-height: $brand-line-height;
         color: $gray-100;
         margin-right: 66px;
+        font-size: 1rem;
 
         @include media-breakpoint-up(md) {
             font-size: 1.375rem;
