--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#imprint, #privacy-policy {
+  margin-top: 100px;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
