--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -133,4 +133,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#imprint, #privacy-policy {
+  margin-top: 100px;
+}
+
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
