--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -112,7 +112,7 @@ $typography-quote-1-line-height: 1.5;
 
 $link-row-margin-top: 19px;
 
-.display-4 {
+.display-4, .display-3, .display-2 {
   font-family: $font-family-sans-serif;
   font-weight: 700;
 }
