--- a/scss/sections/_faq.scss
+++ b/scss/sections/_faq.scss
@@ -4,8 +4,24 @@
 .faq-section {
 
     padding-top: 60px;
+    margin-bottom: 50px;
 
     @include media-breakpoint-up(md) {
         padding-top: 90px;
+    }
+
+    article {
+
+        margin-bottom: 50px;
+
+        h3 {
+            color: $gray-900;
+        }
+
+        p {
+            font-size: 1.125rem;
+            line-height: 1.5;
+            color: $gray-800;
+        }
     }
 }
