thank you page added, images modified

--- a/assets/css/sections/thank-you.css
+++ b/assets/css/sections/thank-you.css
@@ -11153,310 +11153,6 @@ textarea.form-control-lg {
   }
 }
 
-.btn-arrow {
-  background-color: #18191F;
-  box-shadow: -2px 4px 45px rgba(0, 0, 0, 0.4);
-  font-size: 1.25rem;
-  font-weight: 500;
-  line-height: 1.5;
-  color: #fff;
-  padding: 11px 19px;
-}
-.btn-arrow::before {
-  content: url(../../assets/images/white_arrow.svg);
-  margin-right: 10px;
-  vertical-align: middle;
-}
-.btn-arrow:hover {
-  color: #fff;
-}
-
-.feature {
-  text-align: center;
-  margin-bottom: 70px;
-}
-@media (min-width: 768px) {
-  .feature {
-    text-align: left;
-    margin-bottom: 10px;
-  }
-}
-.feature h2 {
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.5rem;
-  line-height: 1.2em;
-}
-@media (min-width: 768px) {
-  .feature h2 {
-    font-size: 2.25rem;
-  }
-}
-.feature p {
-  font-size: 1rem;
-  line-height: 1.5em;
-  color: #474A57;
-}
-@media (min-width: 768px) {
-  .feature p {
-    font-size: 1.25rem;
-  }
-}
-
-.signup {
-  background-color: #fff;
-  box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.25);
-  border-radius: 8px;
-}
-.signup .signup-form {
-  padding: 40px 32px;
-}
-.signup .signup-form .singup-form-header {
-  margin-bottom: 25px;
-}
-.signup .signup-form .input-group-text {
-  font-size: 1.25rem;
-  font-weight: 500;
-  color: #474A57;
-}
-.signup .cta {
-  background-image: url(../../assets/images/cta_background.svg);
-  background-repeat: no-repeat;
-  background-position: top right;
-  background-size: cover;
-  background-color: #0076D1;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  padding: 70px 60px;
-  color: #F4F5F7;
-}
-.signup .cta h1, .signup .cta h4 {
-  color: inherit;
-}
-
-.testimonial {
-  background-color: #fff;
-  padding: 67px 37px 49px 37px;
-  margin-bottom: 30px;
-  border-radius: 8px;
-  box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.25);
-}
-.testimonial .testimonial-text {
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.125rem;
-  font-weight: 300;
-  font-style: italic;
-  linke-height: 1.5;
-}
-.testimonial .testimonial-text::before {
-  content: " ";
-  background-image: url(../../assets/images/quote_mark_dark_blue.svg);
-  background-size: cover;
-  width: 16px;
-  height: 14px;
-  display: block;
-  position: absolute;
-  margin-left: -20px;
-  margin-top: -4px;
-}
-
-.menu .navbar-brand {
-  font-family: "Playfair Display", serif;
-  font-weight: 700;
-  line-height: 1.5;
-  color: #F4F5F7;
-  margin-right: 66px;
-  font-size: 1rem;
-}
-@media (min-width: 768px) {
-  .menu .navbar-brand {
-    font-size: 1.375rem;
-  }
-}
-.menu .navbar-nav {
-  margin-left: auto;
-  justify-content: space-between;
-}
-.menu .navbar-nav .nav-link {
-  color: #F4F5F7;
-}
-
-.hero-section {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #0076D1;
-  padding-top: 100px;
-  text-align: center;
-}
-@media (min-width: 768px) {
-  .hero-section {
-    padding-top: 120px;
-  }
-}
-.hero-section .hero-cta {
-  margin-top: 25px;
-  margin-bottom: 259px;
-}
-.hero-section .product-images {
-  position: absolute;
-  margin-top: -180px;
-  padding-bottom: 100px;
-  width: 100%;
-  background-image: url(../../assets/images/Sun.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.hero-section .product-img.focused {
-  width: 300px;
-  margin: 0 40px;
-}
-@media (min-width: 768px) {
-  .hero-section .product-img.focused {
-    width: 250px;
-  }
-}
-@media (min-width: 992px) {
-  .hero-section .product-img.focused {
-    width: 300px;
-  }
-}
-.hero-section .product-img.unfocused {
-  width: 250px;
-  display: none;
-}
-@media (min-width: 768px) {
-  .hero-section .product-img.unfocused {
-    display: block;
-    width: 200px;
-  }
-}
-@media (min-width: 992px) {
-  .hero-section .product-img.unfocused {
-    width: 250px;
-  }
-}
-.hero-section h1, .hero-section p {
-  color: #F4F5F7;
-}
-.hero-section p {
-  font-size: 1.125rem;
-  line-height: 1.5em;
-}
-@media (min-width: 768px) {
-  .hero-section p {
-    font-size: 1.375rem;
-  }
-}
-.hero-section h1 {
-  margin-bottom: 35px;
-}
-@media (min-width: 768px) {
-  .hero-section h1 {
-    margin-bottom: 25px;
-  }
-}
-
-.feature-section {
-  margin-top: 450px;
-}
-@media (min-width: 992px) {
-  .feature-section {
-    padding-top: 90px;
-    margin-top: 406px;
-  }
-}
-.feature-section .feature-image {
-  background-image: url(../../assets/images/blue_ellipse.svg);
-  background-repeat: no-repeat;
-  background-size: 90%;
-  background-position: center bottom 54px;
-}
-.feature-section .feature-image img {
-  width: 250px;
-  box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.25);
-}
-@media (min-width: 768px) {
-  .feature-section .feature-image img {
-    width: 300px;
-  }
-}
-.feature-section .feature-heading {
-  margin-bottom: 35px;
-}
-@media (min-width: 992px) {
-  .feature-section .feature-heading {
-    margin-bottom: 50px;
-  }
-}
-
-.cta-section {
-  padding-top: 60px;
-}
-@media (min-width: 768px) {
-  .cta-section {
-    padding-top: 90px;
-  }
-}
-
-.testimonials-section {
-  padding-top: 60px;
-}
-@media (min-width: 768px) {
-  .testimonials-section {
-    padding-top: 90px;
-  }
-}
-.testimonials-section .header-testimonials {
-  padding-left: 94px;
-  padding-top: 66px;
-}
-.testimonials-section .header-testimonials::before {
-  content: " ";
-  background-image: url(../../assets/images/quote_mark.svg);
-  background-size: cover;
-  width: 143px;
-  height: 120px;
-  display: block;
-  position: absolute;
-  margin-left: -94px;
-  margin-top: -66px;
-  z-index: -1;
-}
-.testimonials-section .lead-testimonials {
-  padding-left: 94px;
-}
-@media (min-width: 992px) {
-  .testimonials-section .testimonial-2 {
-    width: 85%;
-  }
-}
-@media (min-width: 992px) {
-  .testimonials-section .testimonial-3 {
-    width: 65%;
-  }
-}
-
-.faq-section {
-  padding-top: 60px;
-  margin-bottom: 50px;
-}
-@media (min-width: 768px) {
-  .faq-section {
-    padding-top: 90px;
-  }
-}
-.faq-section article {
-  margin-bottom: 50px;
-}
-.faq-section article h3 {
-  color: #18191F;
-}
-.faq-section article p {
-  font-size: 1.125rem;
-  line-height: 1.5;
-  color: #474A57;
-}
-
 .section-thank-you {
   background-color: #0076D1;
   margin-bottom: 600px;
@@ -11501,30 +11197,4 @@ textarea.form-control-lg {
   line-height: 1.5;
 }
 
-.footer-section {
-  background-color: #0076D1;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  color: #F4F5F7;
-  font-size: 1rem;
-}
-.footer-section .footer-heading {
-  color: inherit;
-}
-.footer-section a {
-  text-decoration: none;
-  color: inherit;
-}
-.footer-section a:hover {
-  font-family: inherit;
-  color: inherit;
-  font-weight: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  text-decoration: none;
-}
-.footer-section .link-row {
-  margin-top: 19px;
-}
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=thank-you.css.map */
