--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,4 +11,5 @@
 @use 'sections/cta';
 @use 'sections/testimonials';
 @use 'sections/faq';
+@use 'sections/thank-you.scss';
 @use 'sections/footer';
